--- a/telegram-bot/Dockerfile
+++ b/telegram-bot/Dockerfile
@@ -7,6 +7,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY bot.py .
 COPY analytics.py .
+COPY mcp_server.py .
 COPY egregore-setup.zip .
 COPY .env.example .env
 
