--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.2",
+    "astro": "^5.17.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
