--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/generate-og.mjs && vite build",
+    "build": "node scripts/generate-og.mjs && node scripts/generate-static.mjs && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
